force-app/main/default/objects/Activity/fields/CheckBox_Field__c.field-meta.xml
<CustomField>
    <fullName>CheckBox_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckBox Field</label>
    <type>Checkbox</type>
</CustomField>