force-app/main/default/objects/Activity/fields/Currency_Field__c.field-meta.xml
<CustomField>
    <fullName>Currency_Field__c</fullName>
    <label>Currency Field</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>