force-app/main/default/objects/Activity/fields/Email_Field__c.field-meta.xml
<CustomField>
    <fullName>Email_Field__c</fullName>
    <label>Email Field</label>
    <type>Email</type>
</CustomField>