force-app/main/default/objects/Activity/fields/Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>Phone_Field__c</fullName>
    <label>Phone Field</label>
    <type>Phone</type>
</CustomField>