force-app/main/default/objects/Activity/fields/PickList_Field__c.field-meta.xml
<CustomField>
    <fullName>PickList_Field__c</fullName>
    <label>PickList Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
            <value>
                <fullName>Value 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>