force-app/main/default/objects/Activity/fields/Text_Field__c.field-meta.xml
<CustomField>
    <fullName>Text_Field__c</fullName>
    <label>Text Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>